spacing fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -548,6 +548,7 @@ footer{
     flex-direction: column;
     width: 100%;
     padding-bottom:50px;
+    gap:20px;
 }
 #enroll .heading-holder{
     width: 100%;
